# pcb-cam-rs

./: .gitignore  Cargo.toml  build.rs
cpp/: clipper_bridge.cpp  clipper_bridge.h
crates/gerber-cli/: Cargo.toml
crates/gerber-cli/src/: main.rs
crates/gerber-render-plan/: Cargo.toml
crates/gerber-render-plan/src/: lib.rs
crates/gerber-render-plan/tests/: corpus.rs
crates/gerber-render-wgpu/: Cargo.toml
crates/gerber-render-wgpu/src/: lib.rs
docs/: cross-validation-methodology.md  polygon-boolean-engine.md  project-structure.md  rendering-architecture.md
src/: am_param.rs  am_primitive.rs  aperture_macro.rs  clipper_bridge.rs  coord.rs  dcode.rs  draw_item.rs  evaluate.rs  geometry.rs  gerber_draw_item.rs  gerber_file_image.rs  gerber_layer.rs  gerber_parser.rs  golden_export.rs  lib.rs  main.rs  netlist_metadata.rs  readgerb.rs  rs274_read_xy_and_ij_coordinates.rs  rs274d.rs  rs274x.rs  types.rs  x2_gerber_attributes.rs
src/export/: golden.rs
src/geometry/: fracture.rs  mod.rs  polyset.rs  shapes.rs  vector.rs
test-corpus/tracespace-v5/: manifest.json
tests/: clipper2_compat.rs  i_overlay_compat.rs  public_api_compat.rs
tools/: cross_validate.py  fetch_tracespace_corpus.py  validate_all.py  validate_packaged_kicad.py  validate_tracespace.py
tools/kicad-exporter/: README.md
tools/tests/: test_cross_validate.py
