[workspace]
members = [
    "crates/gerber-render-plan",
    "crates/gerber-render-wgpu",
    "crates/gerber-cli",
]
default-members = [
    ".",
    "crates/gerber-render-plan",
    "crates/gerber-render-wgpu",
    "crates/gerber-cli",
]
resolver = "3"

[package]
name = "gerber-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"

[build-dependencies]
cc = "1.2"
